test: deprecate 된 URL 생성자 사용하는 곳 수정